practise/ingress/app.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: ingress-lab

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: blue
  namespace: ingress-lab
spec:
  replicas: 2
  selector: 
    matchLabels:  
      app: blue 
  template:
    metadata: 
      labels:  
        app: blue 
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo:1.0
        args: ["-text=Hello from BLUE"]
        ports: [{ containerPort: 5678 }]  

---

apiVersion: v1
kind: Service
metadata: 
  name: blue-svc
  namespace: ingress-lab
spec:
  selector: 
    app: blue
  ports: [{ port: 80, targetPort: 5678 }]

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: green
  namespace: ingress-lab
spec:
  replicas: 2
  selector: 
    matchLabels:  
      app: green 
  template:
    metadata: 
      labels:  
        app: green 
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo:1.0
        args: ["-text=Hello from GREEN"]
        ports: [{ containerPort: 5678 }]

---

apiVersion: v1
kind: Service
metadata: 
  name: green-svc
  namespace: ingress-lab
spec:
  selector: 
    app: green
  ports: [{ port: 80, targetPort: 5678 }]
