practise/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: demo-ingress
  namespace: ingress-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: demo.local
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-svc
            port:  
              number: 80 

      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-svc
            port:  
              number: 80
